# gtest_for_ref

./: CMakeLists.txt
solution_lib/: CMakeLists.txt  solution.cpp
tests/: CMakeLists.txt  test.cpp
